# ZethaDB

./: CMakeLists.txt  COMPLETING_STORAGE.md  CliKlyspecBridge.cpp  CliKlyspecBridge.hpp  IPCtk.hpp  README.md  ZethaCRYPT-CLI.cpp  ZethaCRYPT.hpp  ZethaDB.hpp  ZethaINDEX-CLI.cpp  ZethaINDEX.hpp  ZethaMEM-CLI.cpp  ZethaMEM.hpp  ZethaQUERY.hpp  ZethaRDB-CLI.cpp  ZethaRDB.hpp  ZethaSTORAGE.hpp  zbase64.hpp  zethadb.pc  zethadb.pc.in
docs/: SMOKE_TESTS.md  chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md  chapter8.md
klyspec/: .gitignore  Klyspec-IPC.hpp  Klyspec-Plugin.hpp  Klyspec-Profiles.hpp  Klyspec-Subcommand.hpp  Klyspec.hpp  README.md  USAGE.md
klyspec/IPCtk/: .gitignore  IPCtk.hpp  README.md
klyspec/IPCtk/dest/: C.itkd  Python.itkd  Ruby.itkd
klyspec/IPCtk/manual/: Manual.md
klyspec/IPCtk/tests/fuzz/: fuzz_case_1.cpp  fuzz_case_10.cpp  fuzz_case_11.cpp  fuzz_case_12.cpp  fuzz_case_13.cpp  fuzz_case_14.cpp  fuzz_case_15.cpp  fuzz_case_16.cpp  fuzz_case_17.cpp  fuzz_case_18.cpp  fuzz_case_19.cpp  fuzz_case_2.cpp  fuzz_case_20.cpp  fuzz_case_3.cpp  fuzz_case_4.cpp  fuzz_case_5.cpp  fuzz_case_6.cpp  fuzz_case_7.cpp  fuzz_case_8.cpp  fuzz_case_9.cpp  fuzz_target.cpp  seed_1.txt  seed_10.txt  seed_11.txt  seed_12.txt  seed_13.txt  seed_14.txt  seed_15.txt  seed_16.txt  seed_17.txt  seed_18.txt  seed_19.txt  seed_2.txt  seed_20.txt  seed_3.txt  seed_4.txt  seed_5.txt  seed_6.txt  seed_7.txt  seed_8.txt  (+1 more)
klyspec/IPCtk/tests/unit/: test_1.cpp  test_10.cpp  test_11.cpp  test_12.cpp  test_13.cpp  test_14.cpp  test_15.cpp  test_16.cpp  test_17.cpp  test_18.cpp  test_19.cpp  test_2.cpp  test_20.cpp  test_21.cpp  test_22.cpp  test_23.cpp  test_24.cpp  test_25.cpp  test_3.cpp  test_4.cpp  test_5.cpp  test_6.cpp  test_7.cpp  test_8.cpp  test_9.cpp
klyspec/SerdeTk/: .gitignore  CMakeLists.txt  SerdeTk.hpp
klyspec/SerdeTk/cmake/: serdetk.pc.in
klyspec/SerdeTk/docs/: CMakeLists.txt  chapter01-overview.rst  chapter02-data-model.rst  chapter03-formats-io.rst  chapter04-create-edit.rst  chapter05-print-minify.rst  chapter06-query-engines.rst  chapter07-validation.rst  chapter08-convert-binarize.rst  chapter09-json-reference.rst  chapter10-other-formats.rst  chapter11-sktl-itkd.rst  chapter12-extensibility-testing.rst  index.rst
klyspec/SerdeTk/samples/JSON/: infrstructure-config.json  scientific-dataset.json  weird-edge-cases.json
klyspec/SerdeTk/samples/XML/: enterprise-data.xml  mixed-content-cdata.xml  namespaces.xml
klyspec/SerdeTk/std/binary/: BSON.sktl  MessagePack.sktl
klyspec/SerdeTk/std/textual/: JSON.sktl  S-Expr.sktl  XML.sktl  YAML.sktl
klyspec/SerdeTk/test/: CMakeLists.txt
klyspec/SerdeTk/test/corpus/parser/: xml_attr_slash.xml  xml_cdata.xml  xml_doctype.xml  xml_pi_inside.xml
klyspec/SerdeTk/test/fuzz/: fuzz_azmaidl_parser.c
klyspec/SerdeTk/test/unit/: test_parser_workflow.cpp
klyspec/examples/plugins/: EnvPlugin.cpp  LoggingPlugin.cpp  MetricsPlugin.cpp
klyspec/examples/profiles/: sample.json  sample.sexp  sample.xml  sample.yaml
klyspec/examples/subcommands/: BuildCommand.cpp  InspectCommand.cpp  RunCommand.cpp
klyspec/manual/: chapter01-overview.rst  chapter02-architecture.rst  chapter03-dsl.rst  chapter04-parser.rst  chapter05-plugins.rst  chapter06-subcommands.rst  chapter07-ipc.rst  chapter08-profiles.rst  chapter09-runtime.rst  chapter10-security.rst  chapter11-testing.rst  chapter12-examples.rst
klyspec/tests/smoke/: smoke_dsl_parser.cpp  smoke_ipc.cpp  smoke_plugins.cpp  smoke_profiles.cpp  smoke_registry.cpp  smoke_runtime_parser.cpp
tests/: CMakeLists.txt  smoke_include.cpp
tests/e2e/: smoke_stage10.sh
tests/fuzz/: fuzz_compare.cpp  fuzz_insert.cpp  fuzz_main.cpp  fuzz_malformed_query.cpp  fuzz_malformed_schema.cpp  fuzz_query.cpp  fuzz_runtime.cpp  fuzz_zetahrdb_query.cpp  fuzz_zethaindex_cli.cpp  fuzz_zethaindex_core.cpp  fuzz_zethamem_query.cpp  fuzz_zethaquery_parser.cpp
tests/unit/: test_stage10_e2e_wrapper.cpp  test_zetahrdb_stage9.cpp  test_zethadb.cpp  test_zethaindex.cpp  test_zethaindex_cli.cpp  test_zethamem_stage8.cpp  test_zethaquery_parser.cpp  test_zethastorage_crud.cpp
